# physics-lint

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  README.md  RUNLOG.md  pyproject.toml
.github/workflows/: ci.yml  external-validation.yml  physics-lint.yml  rollout-anchors.yml
docs/: tradeoffs.md
docs/audits/: 2026-04-22-f3-hunt-results.md  2026-04-22-pdebench-hansen-pins.md  2026-04-24-plan-smoke-precheck.md  2026-04-24-task-6-preflight.md
docs/backlog/: v1.1.md  v1.2.md
docs/design/: 2026-04-14-physics-lint-v1.md  spike-notes-2026-04-14.md
docs/plans/: 2026-04-14-physics-lint-v1-week-1.md
docs/reports/: engineering_validation_summary.md  integration_contract_part_ix_engineering_fill.md  physics_lint_v1_validation_report.md
docs/sphinx/: conf.py  index.md  loading.md  security.md
dogfood/: _extract_predictions.py  clone_laplace_uq_bench.sh  dogfood_real_results.md  make_ci_dumps.py  run_dogfood.py  run_dogfood_real.py
dogfood/laplace_uq_bench/: README.md  __init__.py  common.py  ddpm_pred_v1.npz  fno_pred_v1.npz  generate_dumps.py  run_regime_comparison.py  unet_regressor_pred_v1.npz
examples/: README.md  broken_model_gallery.ipynb  broken_model_gallery.md
external_validation/: README.md
external_validation/PH-BC-001/: CITATION.md  README.md  test_anchor.py
external_validation/PH-BC-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-CON-001/: CITATION.md  README.md  test_anchor.py
external_validation/PH-CON-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-CON-003/: CITATION.md  README.md  test_anchor.py
external_validation/PH-CON-004/: CITATION.md  README.md  test_anchor.py
external_validation/PH-NUM-001/: CITATION.md  README.md  test_anchor.py
external_validation/PH-NUM-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-POS-001/: AUDIT.md  CITATION.md  README.md  test_anchor.py
external_validation/PH-POS-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-RES-001/: CITATION.md  README.md  calibrate_bounds.py  test_anchor.py
external_validation/PH-RES-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-RES-003/: CITATION.md  README.md  test_anchor.py
external_validation/PH-SYM-001/: CITATION.md  README.md  test_anchor.py
external_validation/PH-SYM-002/: CITATION.md  README.md  test_anchor.py
external_validation/PH-SYM-003/: CITATION.md  README.md  test_anchor.py
external_validation/PH-SYM-004/: CITATION.md  README.md  test_anchor.py
external_validation/PH-VAR-002/: CITATION.md  README.md  test_anchor.py
external_validation/_harness/: TEXTBOOK_AVAILABILITY.md  aposteriori.py  assertions.py  citations.py  divergence.py  energy.py  fixtures.py  mms.py  symmetry.py  (+2 more)
scripts/: calibrate_floors.py  check_citation_md_three_function_structure.py  check_theorem_number_framing.py  generate_config_schema.py  measure_sym_floors.py  smoke_self_test.py
tests/: conftest.py  test_analytical.py  test_analytical_heat_wave.py  test_bochner_norm.py  test_broken_cnn_validation.py  test_callable_field.py  test_cli_check.py  test_cli_rules_config.py  test_config.py  test_field_base.py  test_field_properties.py  test_gridfield_fd.py  test_gridfield_spectral.py  test_load_floor_wildcard.py  test_loader.py  test_loader_time_dependent.py  test_make_ci_dumps.py  test_meshfield.py  test_norms.py  test_registry.py  test_report.py  test_report_serializers.py  test_sarif.py  test_spec.py
(+155 files in other folders)
